add bcds search
